# TradeSimple

./: .dockerignore  .gitignore  .prettierrc  README.md  bun.lockb  docker-compose.yml  package.json
scripts/: flush_redis_unix.sh  flush_redis_win.bat
services/auth/: Dockerfile  README.md  bun.lockb  package.json
services/auth/src/: index.ts
services/auth/src/controllers/: authController.ts
services/auth/src/routes/: authRoutes.ts
services/auth/src/services/: authService.ts
services/foobar-service/: README.md  bun.lockb  index.ts  package.json
services/gateway/: Dockerfile  app.conf  nginx.conf
services/matching-engine/: .gitignore  Cargo.toml  Dockerfile  README.md
services/matching-engine/src/: consumers.rs  main.rs  matching_pq.rs  models.rs  rabbitmq.rs  state.rs
services/order-manager/: Dockerfile  README.md  bun.lockb  package.json  tsconfig.json
services/order-manager/src/: index.ts
services/order-update/: Dockerfile  README.md  package.json
services/order-update/src/: index.ts
services/stock-price/: Cargo.toml  Dockerfile  README.md
services/stock-price/src/: consumer.rs  get_stock_prices.rs  jwt_middleware.rs  main.rs  rabbitmq.rs  state.rs
services/user-api/: Dockerfile  README.md  package.json
services/user-api/src/: index.ts
services/web-ui/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
services/web-ui/src/: App.svelte  app.css
tests/: auth.test.ts  engine.test.ts  setup.test.ts  transaction.test.ts
tests/utils/: buy_load_test.ts  index.ts  login_load_test.ts
(+38 files in other folders)
