[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15.7"
amqprs = "2.1.0"
async-trait = "0.1.86"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
