[package]
name = "stock-price"
version = "0.1.0"
edition = "2024"

[dependencies]
amqprs = "2.1.0"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
async-trait = "0.1.86"
serde = "1.0.218"
serde_json = "1.0.137"
jsonwebtoken = "9.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
